--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.12.4",
     "gsap": "^3.13.0",
     "lottie-react": "^2.4.1",
     "next": "15.4.2",
